feat : develop update brand information feature